# noir

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  Makefile  README.md  components.json  compose.yaml  index.d.ts  index.html  justfile  package.json  pnpm-lock.yaml  release.sh  tailwind.config.cjs  tailwind.config.js  tsconfig.json  version.sh  vite.config.ts
.github/scripts/: release.sh
.github/workflows/: main.yml
dev/: certs.sh
dev/clickhouse/: init.sql
dev/mariadb/: mysql.cnf
dev/mysql/: mysql.conf
dev/psql/: init.sh  pg_hba.conf
patches/: solid-contextmenu@0.0.2.patch  sql-bricks@3.0.1.patch
src/: App.tsx  Router.tsx  actions.ts  index.css  index.d.ts  index.tsx  interfaces.ts  main.tsx  old.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240101000000_initial_schema.sql  20240101000001_metadata.sql  20240102000000_saved_queries.sql
src-tauri/src/: lib.rs  query.rs  state.rs
src-tauri/src/database/: app.rs  connections.rs  credentials.rs  database.rs  init.rs  init_conn.rs  mod.rs  queries.rs
src-tauri/src/database/engine/: mod.rs
src-tauri/src/database/engine/mysql/: mod.rs  query.rs  tables.rs  utils.rs
src-tauri/src/database/engine/postgresql/: mod.rs  query.rs  tables.rs  utils.rs
src-tauri/src/database/engine/sqlite/: query.rs  tables.rs  utils.rs
src-tauri/src/database/migrations/01-initial-schema/: up.sql
src-tauri/src/database/types/: connection.rs  result.rs
src-tauri/src/engine/: engine.rs  exec.rs  init.rs  mod.rs
src-tauri/src/engine/clickhouse/: client.rs  mod.rs  query.rs  tables.rs
src-tauri/src/engine/mysql/: mod.rs  query.rs  sql_to_json.rs  tables.rs  utils.rs
src-tauri/src/engine/postgresql/: mod.rs  query.rs  sql_to_json.rs  tables.rs  utils.rs
src-tauri/src/engine/sqlite/: mod.rs  query.rs  sql_to_json.rs  tables.rs  utils.rs
src-tauri/src/engine/types/: config.rs  connection.rs  mod.rs  result.rs
src-tauri/src/engine/utils/: init_conn.rs  mod.rs
src-tauri/src/handlers/: connections.rs  mod.rs  queries.rs  saved_queries.rs  task.rs
src-tauri/src/methods/: connections.rs
src-tauri/src/queues/: query.rs
src-tauri/src/utils/: crypto.rs  error.rs  fs.rs  general.rs  init.rs  mod.rs
src/components/: AddConnectionForm.tsx  Alerts.tsx  Card.tsx  ConnectionsList.tsx  DialectIcon.tsx  Error.tsx  HomeNavbar.tsx  command-palette.tsx  error-page.tsx  query-editor.tsx  theme-customizer.tsx  types.ts
src/components/AddConnectionsForm/: AddConnectionForm.tsx  index.ts
src/components/CommandPalette/: CommandPaletteContext.tsx  actions.ts
src/components/Connections/: AddConnectionForm.tsx
src/components/Connections/ConnectionsList/: ConnectionsList.tsx
src/components/Connections/Console/: Content.tsx  QueryTextArea.tsx  ResultsArea.tsx  Sidebar.tsx
src/components/ConnectionsList/: ConnectionItem.tsx  ConnectionsList.tsx
src/components/ConnectionsList/ConnectionItem/: ActionsMenu.tsx  ConnectionItem.tsx
src/components/Console/: Content.tsx  QueryTextArea.tsx  Sidebar.tsx
src/components/Pages/: Console.tsx  Home.tsx
src/components/Screens/: Main.tsx  SidebarWrapper.tsx
src/components/Screens/Console/: Console.tsx  Sidebar.tsx
src/components/Screens/Help/: Help.tsx
src/components/Screens/Home/: Home.tsx
src/components/Screens/Settings/: Keymaps.tsx  OpenIssue.tsx  Settings.tsx
src/components/UI/: Alert.tsx  Alerts.tsx  Button.tsx  Card.tsx  Checkbox.tsx  Collapse.tsx  ColorCircle.tsx  Dropdown.tsx  FileInput.tsx  FilePicker.tsx  Keymaps.tsx  Label.tsx  Loader.tsx  Select.tsx  Table.tsx  TextInput.tsx  ThemeSwitch.tsx  alert.tsx  button.tsx  card.tsx  collapsible.tsx  color-circle.tsx  context-menu.tsx  dialog.tsx  file-picker.tsx  hover-card.tsx  index.ts  input.tsx  kbd.tsx  loader.tsx  sheet.tsx  sidebar.tsx  switch.tsx  tabs.tsx  textfield.tsx  toggle.tsx  tooltip.tsx
src/components/UI-old/: FilePicker.tsx  TextInput.tsx  ThemeSwitch.tsx  index.ts
src/components/UI-old/Icons/: Add.tsx  ChevronLeft.tsx  Close.tsx  Cog.tsx  Copy.tsx  Enter.tsx  Fire.tsx  Function.tsx  Key.tsx  Pen.tsx  Refresh.tsx  ShareNodes.tsx  Table.tsx  Terminal.tsx  ThreeDots.tsx  index.ts
src/components/UI/Icons/: Add.tsx  ChevronLeft.tsx  ChevronRight.tsx  Close.tsx  Cog.tsx  Copy.tsx  DotsVertical.tsx  Edit.tsx  Fire.tsx  Function.tsx  Home.tsx  Key.tsx  MindShare.tsx  Pen.tsx  QuestionMark.tsx  Refresh.tsx  ShareNodes.tsx  SwapChevronDown.tsx  SwapChevronRight.tsx  Table.tsx  ThreeDots.tsx  UserSettings.tsx  Vim.tsx  index.ts
src/components/connections/: form.tsx  grid.tsx  manager.tsx
src/components/editor/: query-editor.tsx
src/components/lib/: combine-props.ts
src/components/main/: Connection.tsx  Console.tsx  Home.tsx
src/components/providers/: connected-connections.tsx
src/components/sidebar/: db-connection-header.tsx  db-sidebar.tsx
src/components/sidebar/lib/: use-mobile.ts
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  checkbox.tsx  command.tsx  drawer.tsx  kbd.tsx  multi-select.tsx  radio-group.tsx  select.tsx  separator.tsx  skeleton.tsx  table.tsx  textarea.tsx  tooltip.tsx
src/pages/: Connection.tsx  Home.tsx  Tabs.tsx  connections.tsx  console.tsx  help.tsx  settings.tsx
src/pages/connections/: manager.tsx
src/pages/connections/connections/: form.tsx  grid.tsx
src/pages/console/: console.tsx  query-editor.tsx
src/pages/console/console-content/: TableStructureTab.tsx
src/pages/console/main/: main.tsx  query-editor.tsx
src/pages/manager/: connections.tsx
src/pages/settings/: about.tsx  connection-settings.tsx  credits.tsx  keymaps.tsx  options.tsx  settings.tsx  trigger-command-palette.tsx
src/pages/settings/themes/: grid.tsx  (+2 more)
src/services/: App.ts  Backend.ts  ConnectionTabs.ts  Connections.ts  Context.tsx  Error.ts  Messages.ts  RegisterKeymaps.tsx  Tabs.ts  Tabs.tsx
src/services/palette/: context.tsx  palette.tsx  provider.tsx  wrapper.tsx
src/utils/: formatters.ts  use-head.ts  utils.ts
src/utils/i18n/: en.json  index.ts
(+65 files in other folders)
