[package]
name = "noir"
version = "1.1.3"
description = ""
authors = [""]
license = ""
repository = ""
edition = "2021"

[[bin]]
name = "noir"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [
  "dialog-open",
  "os-all",
  "updater",
  "process-relaunch",
  "clipboard-all",
  "dialog-save",
  "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
rusqlite = { version = "0.30.0", features = [
  "bundled",
  "uuid",
  "serde_json",
  "chrono",
] }
anyhow = "1.0.71"
log = "0.4.19"
env_logger = "0.11.1"
rand = "0.8.5"
thiserror = "1.0.40"
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "serde"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
sql_lexer = "0.9.4"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "^0.7.10"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
  "colored",
] }
sqlparser = "0.49.0"
md-5 = "0.10.6"
chrono = { version = "0.4.38", features = ["serde"] }
postgres = { version = "0.19.7", features = [
  "array-impls",
  "with-serde_json-1",
  "with-chrono-0_4",
] }
deadpool-postgres = "0.12.1"
deadpool-sqlite = "0.7.0"
magic-crypt = "3.1.13"
rusqlite_migration = { version = "1.1.0", features = ["from-directory"] }
include_dir = "0.7.3"
lazy_static = "1.4.0"
postgres-openssl = "0.5.0"
openssl = "0.10.63"
sqlx = { version = "0.7.4", features = [
  "runtime-tokio",
  "tls-rustls",
  "mysql",
  "postgres",
  "sqlite",
  "json",
  "chrono",
] }
[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
